# CG1617

./: .gitattributes  .gitignore  Makefile  README.md  gerador.c
Engine/: CMakeLists.txt  Engine  Makefile  anel.3d
Engine/resources/: anel2.3d  box.3d  cone.3d  orbit.3d  orbita.3d  planetas.xml  ring.3d  ring2.3d  ring2Light.3d  ring3.3d  ringLight.3d  scene.xml  scene11.xml  scene2.xml  scene3.xml  scene4.xml  scene5.xml  scene6.xml  scene7.xml  scene8.xml  scene9.xml  sistema.xml  sistema2.xml  sistema2luzes.xml  sistema3.xml  sistema4.xml  sistema5.xml  sistemaSolar.xml  sphere.3d  sphereLight.3d  teapot.xml  teapot2.xml  teapotLight2.3d  teste.3d  texture.xml  texure2.xml
Engine/src/: ATOCPP.cpp  AnimatedRotation.cpp  AnimatedRotation.h  AnimatedTranslation.cpp  AnimatedTranslation.h  CMakeLists.txt  Catmull-Rom.cpp  Catmull-Rom.h  Constantes.h  DirectionalLight.cpp  DirectionalLight.h  FixedLight.cpp  FixedLight.h  GeometricShape.h  Group.cpp  Group.h  Light.cpp  Light.h  LightAmbient.cpp  LightAmbient.h  LightDiffuse.cpp  LightDiffuse.h  LightProperty.cpp  LightProperty.h  LightSpecular.cpp  LightSpecular.h  Makefile  MatAmbient.cpp  MatAmbient.h  MatDiffuse.cpp  MatDiffuse.h  MatEmissive.cpp  MatEmissive.h  MatSpecular.cpp  MatSpecular.h  Materials.cpp  Materials.h  Plane.cpp  Point3d.cpp  Point3d.h  (+20 more)
Generator/: Generator  Makefile  anel.3d  anel2.3d  box_test.3d  cone.3d  plane.3d  ring1Light.3d  ringLight.3d  sphere.3d  sphereLight.3d  teapot2.3d  teste.txt  teste_box.3d
Generator/resources/: plane.3d  ring.3d  ring2.3d  ring3.3d  sphere.3d  teapot.patch
Generator/src/: CMakeLists.txt  Plane.h  Point2d.cpp  Point2d.h  Point3d.cpp  Point3d.h  Triangle.cpp  Triangle.h  main.cpp
aula2/: main.cpp
dados/: medidas_sistema_solar.xlsx
diagramas/: Untitled Diagram.xml  estrutura.xml
figuras/: diagramaClasses.vpp  sistema_solar.7z  teapot.7z
relatorio_fase3/: Makefile  main.tex
relatorio_fase3/chapters/: bezier.tex  cap1.tex  cap2.tex  cap3.tex  catmullRom.tex  conclusao.tex  disco.tex  esfera.tex  introducao.tex  multMatrixVector.tex  preliminares.tex  title.tex  vbos.tex
relatorio_fase4/: Makefile  main.tex  references.bib
relatorio_fase4/chapters/: apendix.tex  cap1.tex  cap2.tex  cap3.tex  conclusao.tex  introducao.tex  title.tex
relatorio_fase4/chapters_tmp/: .cap2.tex.swp  cap3.tex  introducao.tex  preliminares.tex
tmp/: cone.cpp  gerador.c  main.cpp  sphere.cpp
